[package]
name = "cast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
minreq = { version = "2.4.2", features = [ "https-rustls" ] }
tui = "0.16.0"
termion = "1.5.6"
mpv = "0.2.3"
