[package]
name = "minicast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.14.1"
minreq = { version = "2.4.2", features = [ "https-rustls" ] }
libmpv = "2.0.1"
cursive = { version = "0.16", features = ["toml"] }

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]
